--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./assets/vite.4a748afd.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space tourism</title>
-    <script type="module" crossorigin src="./assets/index.dc003568.js"></script>
+    <script type="module" crossorigin src="./assets/index.00012d48.js"></script>
     <link rel="stylesheet" href="./assets/index.e333ada8.css">
   </head>
   <body>
